--- a/css/movies-dc.css
+++ b/css/movies-dc.css
@@ -1,7 +1,20 @@
-.header {
-    background-color: darkgrey;
-    border-bottom: 1px solid black;
+
+/*genres*/
+#genres {
+    white-space: nowrap;
 }
+.genre-link {
+    display: inline-block;
+    margin-right: 10px;
+    cursor: pointer;
+}
+.genre-container{
+    display: flex;
+    flex-direction: row;
+    margin-left: 40px;
+}
+
+/*cards*/
 .card {
     height: 375px;
     width: 300px;
@@ -14,6 +27,12 @@
     gap: 15px;
 
 }
+
+/*Header*/
+.header {
+    background-color: darkgrey;
+    border-bottom: 1px solid black;
+}
 .column.right {
     display: flex;
     align-items: flex-end;
@@ -24,13 +43,11 @@
     align-items: flex-start;
     padding: 15px;
 }
+
+/*Footer*/
 .column.left.foot {
     display: none;
     transition: all ease .3s;
-}
-.column{
-    display:flex;
-    justify-content: center;
 }
 .options {
     padding: 10px;
@@ -44,6 +61,14 @@
     border: 2px solid red;
     border-radius: 999px;
 }
+
+/*resets fix*/
+.column{
+    display:flex;
+    justify-content: center;
+}
+
+/*Custom alignment and toggle class*/
 .align {
     display: flex;
     align-self: center;
@@ -54,6 +79,7 @@
     padding: 15px;
 }
 
+/*Footer button*/
 .column.center.parent {
     display: flex;
     align-items: center;
@@ -69,11 +95,22 @@
     transition: all ease .3s;
     flex:0 1 75px;
 }
-
 .footer.open {
     flex: 0 1 300px;
     transition: all ease .3s;
 }
+.button-toggle {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    font-weight: bolder;
+    font-size: 24px;
+}
+.button-toggle.flip {
+    rotate: 180deg;
+}
+
+/*Cards and main content*/
 .movies-cards {
     width: 100%;
     background-color: white ;
@@ -83,7 +120,6 @@
     position:relative;
 
 }
-
 .mask {
     position:absolute;
     top:0;
@@ -98,7 +134,6 @@
     overflow: hidden;
     position: relative;
 }
-
 .img-wrapper img {
     position: absolute;
     top: 0;
@@ -107,26 +142,11 @@
     width: 100%;
     object-fit: cover;
 }
-
 .remove {
     border-radius: 9999px;
 }
-.column.stretch {
-    display: flex;
-    align-items: stretch;
-}
-.button-toggle {
-    background-color: transparent;
-    font-weight: bolder;
-    font-size: 24px;
-    transition: all ease .4s;
-}
-.button-toggle.flip {
-    rotate: 180deg;
-    transition: all ease .4s;
-}
 
-
+/*Loading Screen*/
 #loading {
     display: block;
     position: absolute;
