--- a/css/movies-dc.css
+++ b/css/movies-dc.css
@@ -7,6 +7,7 @@
     display: inline-block;
     margin-right: 10px;
     cursor: pointer;
+    padding-left: 20px;
 }
 .genre-container{
     display: flex;
