--- a/css/movies-dc.css
+++ b/css/movies-dc.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:ital,wght@1,300&display=swap');/*genres*/
 
-/*genres*/
+h1, h3, .genre-link {
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+body {
+    background-image: url("/images/curtain.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 #genres {
     white-space: nowrap;
 }
@@ -34,10 +44,15 @@
     background-color: darkgrey;
     border-bottom: 1px solid black;
 }
+
 .column.right {
     display: flex;
     align-items: flex-end;
     padding: 15px;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 .column.left {
     display: flex;
@@ -57,8 +72,9 @@
     border-radius: 999px;
 }
 .options2 {
-    padding: 5px;
-    width: 65%;
+    padding-right: 30px;
+    width: 30%;
+    height: 30px;
     border: 2px solid red;
     border-radius: 999px;
 }
@@ -91,10 +107,13 @@
 }
 .footer {
     display: flex;
-    background-color: darkgrey;
+    /*background-color: darkgrey;*/
     border-top: 1px solid black;
     transition: all ease .3s;
     flex:0 1 75px;
+    background-image: url("/images/coke-bottles.jpg");
+    background-size: contain;
+    background-repeat: repeat;
 }
 .footer.open {
     flex: 0 1 300px;
@@ -112,6 +131,11 @@
 }
 
 /*Cards and main content*/
+
+.javascript-cards .column {
+    display: flex;
+}
+
 .movies-cards {
     width: 100%;
     background-color: white ;
@@ -119,7 +143,9 @@
     padding: 20px;
     gap: 15px;
     position:relative;
-
+    background-image: url("/images/movies.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .mask {
     position:absolute;
@@ -147,6 +173,18 @@
     border-radius: 9999px;
 }
 
+.card {
+    width: 40vw;
+}
+
+#updateRating {
+    margin-bottom: 10px;
+}
+
+.update-rating-btn {
+    margin-bottom: 10px;
+}
+
 /*Loading Screen*/
 #loading {
     display: block;
@@ -154,10 +192,10 @@
     top: 0;
     left: 0;
     z-index: 100;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(192, 192, 192, 0.5);
-    background-image: url("https://i.stack.imgur.com/MnyxU.gif");
+    background-image: url("https://media.giphy.com/media/3y0oCOkdKKRi0/giphy.gif");
     background-repeat: no-repeat;
     background-position: center;
 }
